[Blink] Avoid SetShouldFlattenTransform() back and forth

In CompositedLayerMapping::UpdateShouldFlattenTransform() we apply
different values on the same layer multiple times for different layer
configuration. This resulted in unnecessary redraw in the compositor.

This CL collapsed the logic so that each layer will be programmed
exactly one time.

BUG=783614

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Id2551e6e49d2555359da9d954b44555cb1f41a63
Reviewed-on: https://chromium-review.googlesource.com/780803
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519477}
Former-commit-id: f498304ebf21ed9de9b459a0087d8c9817e25c52